--- a/scraper/views/home.handlebars
+++ b/scraper/views/home.handlebars
@@ -1,2 +1,9 @@
 <h1>Zeke Bot</h1>
+
+<form action="/scraper" method="Post">
+	<lable for="url">URL:</lable>
+	<input type="text" id="url" name="url" placeholder="Enter URL" />
+	<input type="submit" value="Scraper" />
+</form>
+ 
 {{{scrape}}}
