--- a/scraper/views/layouts/main.handlebars
+++ b/scraper/views/layouts/main.handlebars
@@ -6,6 +6,11 @@
 </head>
 
 <body>
+	<form action="/scraper" method="Post">
+		<lable for="url">URL:</lable>
+		<input type="text" id="url" name="url" placeholder="Enter URL" />
+		<input type="submit" value="Scrape" />
+	</form>
 	{{{body}}}
 </body>
 
